fix: update long urls wrapped in <nolink> to break and wrap to work on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14675,6 +14675,12 @@ footer .footer-legal ul li {
   content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' fill='%23e6656c'%3e%3cpath fill-rule='evenodd' d='M9.33329 11C9.7065 11 10.0765 11.1557 10.3399 11.4585L16.0063 17.9844L21.661 11.4713C22.144 10.9158 22.9864 10.8561 23.5409 11.3391C24.0965 11.8221 24.1562 12.6635 23.6742 13.219L17.0129 20.8912C16.5075 21.4745 15.5062 21.4755 14.9997 20.8912L8.32668 13.2073C7.84364 12.6517 7.90335 11.8093 8.45891 11.3274C8.71162 11.1077 9.02299 11 9.33329 11Z'/%3e%3c/svg%3e");
 }
 
+blockquote nolink {
+  overflow-wrap: break-word; /* Breaks long words, including URLs */
+  word-wrap: break-word; /* Fallback for older browsers */
+  word-break: break-all; /* Ensures URLs break correctly if necessary */
+}
+
 /* print button */
 .btn-print {
   position: relative;
